Fix nav z-index

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -143,7 +143,7 @@ footer:before {
   background : @black;
   position: fixed;
   width : 100%;
-  z-index: 100;
+  z-index: 1000;
 }
 
 #content_wrapper {
